[gd_scene load_steps=19 format=3 uid="uid://bkuioef3meg5d"]

[ext_resource type="Script" path="res://scripts/ui/SettingsMenu.gd" id="1_f0ega"]
[ext_resource type="Texture2D" uid="uid://dbrcb5w1mhni4" path="res://textures/tilesets/UI.png" id="2_v1ki7"]
[ext_resource type="FontFile" uid="uid://cck2jg6pl042w" path="res://assets/bm-japan.ttf" id="3_ri6wc"]
[ext_resource type="Script" path="res://scripts/ui/volume_setting.gd" id="4_610yk"]
[ext_resource type="Script" path="res://scenes/ui/skip_day.gd" id="4_vwbyn"]
[ext_resource type="Script" path="res://scripts/ui/ghost_setting.gd" id="5_hcvse"]
[ext_resource type="Script" path="res://scripts/ui/scan_line_setting.gd" id="6_ptacn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_euxu0"]
texture = ExtResource("2_v1ki7")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
region_rect = Rect2(144, 32, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nbmx8"]
load_path = "res://.godot/imported/UI.png-0aebc67c96cdfeeba9d88d18dee6e847.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_76sti"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_nbmx8")
region = Rect2(0, 48, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ikx88"]
load_path = "res://.godot/imported/UI.png-0aebc67c96cdfeeba9d88d18dee6e847.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_xitj7"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_ikx88")
region = Rect2(0, 48, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8xsnv"]
load_path = "res://.godot/imported/UI.png-0aebc67c96cdfeeba9d88d18dee6e847.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_hsnnx"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_8xsnv")
region = Rect2(0, 48, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_na5dc"]
load_path = "res://.godot/imported/UI.png-0aebc67c96cdfeeba9d88d18dee6e847.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_t8jve"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_na5dc")
region = Rect2(0, 48, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_15gdt"]
load_path = "res://.godot/imported/UI.png-0aebc67c96cdfeeba9d88d18dee6e847.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_dlqh5"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_15gdt")
region = Rect2(0, 48, 16, 16)

[node name="SettingsMenu" type="CenterContainer" node_paths=PackedStringArray("settings_container", "ghost_setting", "scan_line_setting")]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f0ega")
settings_container = NodePath("PanelContainer/VBoxContainer/SettingsContainer")
ghost_setting = NodePath("PanelContainer/VBoxContainer/SettingsContainer/GhostSetting")
scan_line_setting = NodePath("PanelContainer/VBoxContainer/SettingsContainer/ScanLineSetting")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_euxu0")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ri6wc")
theme_override_font_sizes/font_size = 12
text = "SETTINGS"
horizontal_alignment = 1

[node name="SettingsContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SkipDay" type="HBoxContainer" parent="PanelContainer/VBoxContainer/SettingsContainer" node_paths=PackedStringArray("settings_menu")]
process_mode = 3
layout_mode = 2
script = ExtResource("4_vwbyn")
settings_menu = NodePath("../../../..")

[node name="Indicator" type="TextureRect" parent="PanelContainer/VBoxContainer/SettingsContainer/SkipDay"]
layout_mode = 2
texture = SubResource("AtlasTexture_76sti")

[node name="SettingName" type="Label" parent="PanelContainer/VBoxContainer/SettingsContainer/SkipDay"]
layout_mode = 2
text = "[A] Skip to next Day"

[node name="MusicSetting" type="HBoxContainer" parent="PanelContainer/VBoxContainer/SettingsContainer" node_paths=PackedStringArray("slider")]
layout_mode = 2
script = ExtResource("4_610yk")
slider = NodePath("HSlider")
bus = "Music"

[node name="Indicator" type="TextureRect" parent="PanelContainer/VBoxContainer/SettingsContainer/MusicSetting"]
layout_mode = 2
texture = SubResource("AtlasTexture_xitj7")

[node name="SettingName" type="Label" parent="PanelContainer/VBoxContainer/SettingsContainer/MusicSetting"]
layout_mode = 2
text = "Music Volume"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/SettingsContainer/MusicSetting"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SettingsContainer/MusicSetting"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
step = 10.0

[node name="SFXSetting" type="HBoxContainer" parent="PanelContainer/VBoxContainer/SettingsContainer" node_paths=PackedStringArray("slider")]
layout_mode = 2
script = ExtResource("4_610yk")
slider = NodePath("HSlider")
bus = "SFX"

[node name="Indicator" type="TextureRect" parent="PanelContainer/VBoxContainer/SettingsContainer/SFXSetting"]
layout_mode = 2
texture = SubResource("AtlasTexture_hsnnx")

[node name="SettingName" type="Label" parent="PanelContainer/VBoxContainer/SettingsContainer/SFXSetting"]
layout_mode = 2
text = "SFX Volume"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/SettingsContainer/SFXSetting"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SettingsContainer/SFXSetting"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
step = 10.0

[node name="GhostSetting" type="HBoxContainer" parent="PanelContainer/VBoxContainer/SettingsContainer" node_paths=PackedStringArray("slider")]
layout_mode = 2
script = ExtResource("5_hcvse")
slider = NodePath("HSlider")

[node name="Indicator" type="TextureRect" parent="PanelContainer/VBoxContainer/SettingsContainer/GhostSetting"]
layout_mode = 2
texture = SubResource("AtlasTexture_t8jve")

[node name="SettingName" type="Label" parent="PanelContainer/VBoxContainer/SettingsContainer/GhostSetting"]
layout_mode = 2
text = "Crt Ghosting"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/SettingsContainer/GhostSetting"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SettingsContainer/GhostSetting"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.05

[node name="ScanLineSetting" type="HBoxContainer" parent="PanelContainer/VBoxContainer/SettingsContainer" node_paths=PackedStringArray("slider")]
layout_mode = 2
script = ExtResource("6_ptacn")
slider = NodePath("HSlider")

[node name="Indicator" type="TextureRect" parent="PanelContainer/VBoxContainer/SettingsContainer/ScanLineSetting"]
layout_mode = 2
texture = SubResource("AtlasTexture_dlqh5")

[node name="SettingName" type="Label" parent="PanelContainer/VBoxContainer/SettingsContainer/ScanLineSetting"]
layout_mode = 2
text = "ScanLine Intensity "

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/SettingsContainer/ScanLineSetting"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/SettingsContainer/ScanLineSetting"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 0.1
step = 0.01

[connection signal="value_changed" from="PanelContainer/VBoxContainer/SettingsContainer/GhostSetting/HSlider" to="PanelContainer/VBoxContainer/SettingsContainer/GhostSetting" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/SettingsContainer/ScanLineSetting/HSlider" to="PanelContainer/VBoxContainer/SettingsContainer/ScanLineSetting" method="_on_h_slider_value_changed"]
